--- a/src/index.css
+++ b/src/index.css
@@ -721,6 +721,64 @@ header{
     background-color: #005C95;
 }
 
+.footerContents {
+    width: 100%;
+    height:60vh;
+    position: relative;
+    background: #fff;
+}
+
+.footerCards {
+    margin: 0 auto;
+    max-width: 1180px;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+}
+
+.footerCard{
+    top: 0px;
+    height: 50vh;
+    width: 100%;
+    position: relative;
+    margin: auto ;
+}
+
+.footerCard h2{
+    padding-top: 50px;
+    font-size: 18px;
+    color:#000;
+    float: left;
+    padding-left: 25px;
+    font-weight: 70;
+}
+
+.footerLink {
+    color:#0076BE;
+    font-size: 12px;
+    padding-right: 20px;
+    padding-left: 25px;
+    padding-top: 20px;
+    margin-top: 0px;
+    text-align: left;
+    float:left;
+    text-decoration: none;
+}
+
+.footerLink:hover {
+    text-decoration: underline;
+}
+
+.footerCard img:first-of-type {
+    float: left;
+    padding-left: 25px;
+}
+
+.footerCard img {
+    padding-top: 10px;
+    float: left;
+    padding-left: 5px;
+}
 
 
 @media (min-width: 860px){
